# job-radar

./: .gitignore  README.md  pyproject.toml
config/: companies.yaml  demo-companies.yaml  live-test-companies.yaml  live-test-settings.yaml  scoring.yaml  settings.yaml  target-companies.yaml
job_radar/: __main__.py  candidate_profile.py  cli.py  compensation.py  config.py  email_sender.py  email_summary.py  history_context.py  history_match.py  history_summary.py  job_history.py  models.py  normalize.py  recommendations.py  reporting.py  resume_loader.py  resume_match.py  scoring.py  storage.py  validation.py
job_radar/collectors/: activate.py  adp.py  ashby.py  dayforce.py  greenhouse.py  html.py  icims.py  jibe.py  jobsyn.py  lever.py  oracle_hcm.py  (+7 more)
tests/: test_activate_collector.py  test_adp_collector.py  test_ashby_collector.py  test_candidate_profile.py  test_cli.py  test_collector_registry.py  test_compensation.py  test_config.py  test_dayforce_collector.py  test_email_sender.py  test_email_summary.py  test_greenhouse_collector.py  test_history_context.py  test_history_match.py  test_html_collector.py  test_icims_collector.py  test_jibe_collector.py  test_job_history.py  test_jobsyn_collector.py  test_lever_collector.py  test_normalize.py  test_oracle_hcm_collector.py  test_phase1a_integration.py  test_phenom_collector.py  test_reporting.py  test_resume_loader.py  test_resume_match.py  test_scoring.py  test_selectminds_collector.py  test_smartrecruiters_collector.py  test_storage.py  test_usajobs_collector.py  test_weka_collector.py  test_workday_collector.py
(+3 files in other folders)
