[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-radar"
version = "0.1.0"
description = "Target-company job discovery and triage tool"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["job_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]